# Brlok

./: .gitignore  CHECKLIST_GRILLE_PIEDS.md  README.md  SPECS_PROJET_BRLOK.md  brlok.bat  brlok.command  launch_brlok.py  pyproject.toml
.github/workflows/: release.yml
_bmad-output/brainstorming/: brainstorming-session-2026-02-07.md
_bmad-output/implementation-artifacts/: 1-1-initialisation-du-projet.md  1-2-modeles-de-donnees-hold-et-catalog.md  1-3-persistance-du-catalogue.md  1-4-consultation-du-catalogue.md  1-5-modification-de-la-difficulte-d-une-prise.md  1-6-modification-des-tags-d-une-prise.md  1-7-activer-ou-desactiver-une-prise.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-08.md  prd-validation-report.md  prd.md  product-brief-Brlok-2026-02-07.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
brlok/: __init__.py  __main__.py  main.py
brlok/cli/: __init__.py  commands.py
brlok/config/: __init__.py  difficulty.py  paths.py
brlok/exports/: __init__.py  exporters.py
brlok/generator/: __init__.py  session_generator.py
brlok/gui/: __init__.py  catalog_widget.py  colors.py  config_widget.py  favorites_widget.py  generate_dialog.py  history_widget.py  icon.py  library_widget.py  main_window.py  pan_widget.py  (+3 more)
data/: README.md  catalog_collection.json  favorites.json  templates.json
import/: README.md
scripts/: build_release.py
tests/: __init__.py  conftest.py  test_bootstrap.py
(+44 files in other folders)
